Correct margin and padding on mobile view table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,8 +268,7 @@ footer {
     }
 
     .table-container {
-        margin-left: 2px;
-        margin-right: 2px;
+ 
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
